add hands on 3 file

--- a/hands-on-3/index.html
+++ b/hands-on-3/index.html
@@ -5,25 +5,371 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NVIDIA Store</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <div class="container">
-      <div class="navbar">
-        <div class="left">
-          <div class="logo">
-            <img src="" alt="" />
+    <nav class="navbar">
+      <div class="container container-nav">
+        <div class="nav-first">
+          <div class="nav-left">
+            <div class="logo logo-nav">
+              <img
+                class="logo-img"
+                width="48"
+                height="48"
+                src="https://img.icons8.com/color/48/nvidia.png"
+                alt="nvidia"
+              />
+              <a href="#" class="logo-text">NVIDIA</a>
+            </div>
+            <ul class="menu menu-left">
+              <li><a href="#products">Products</a></li>
+              <li><a href="#solutions">Solutions</a></li>
+              <li><a href="#industries">Industries</a></li>
+              <li><a href="#for-you">For You</a></li>
+            </ul>
           </div>
-          <ul class="menu-left"></ul>
-        </div>
 
-        <div class="right">
-          <ul class="menu-right"></ul>
-          <div class="icon-top">
-            <i></i>
-            <i></i>
+          <div class="nav-right">
+            <ul class="menu menu-right">
+              <li><a href="#shop">Shop</a></li>
+              <li><a href="#drivers">Drivers</a></li>
+              <li><a href="#support">Support</a></li>
+            </ul>
+            <div class="icon-nav">
+              <img src="img/glass.svg" alt="" />
+              <img src="img/profile.svg" alt="" />
+              <i></i>
+            </div>
           </div>
         </div>
       </div>
+      <div class="nav-second">
+        <div class="container">
+          <p class="nav-second-text">NVIDIA Store</p>
+        </div>
+      </div>
+    </nav>
+
+    <!-- **************** HERO SECTION **************** -->
+
+    <div class="hero">
+      <!-- <img src="img/hero-img.webp" alt="" /> -->
+      <div class="container">
+        <div class="grid-2-cols">
+          <div class="hero-title">
+            <h5>GeForce RTX 40 Series</h5>
+            <h1>BEYOND FAST</h1>
+            <button class="btn primary-btn btn-hero">Shop Now</button>
+          </div>
+          <div class="hero-img"></div>
+        </div>
+      </div>
     </div>
+
+    <!-- ******* Gaming and Entertainment Section *******-->
+    <main class="main-section">
+      <div class="container">
+        <div class="product">
+          <!-- ? game -->
+          <div class="game-section product-section">
+            <h3 class="game-heading product-heading">
+              Gaming and Entertainment
+            </h3>
+            <div class="game card-grid grid-4-cols">
+              <div class="game-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/geforce-ada-40-series-gf-spotlight-600x338-p@2x.jpg"
+                  alt="GeForce Graphics Cards and Desktops"
+                />
+                <div class="game-card-con card-content">
+                  <h6 class="game-card-heading card-heading">
+                    GeForce Graphics Cards and Desktops
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="game-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/geforce-rtx-30-series-laptops-evens-4c25-P@2x.jpg"
+                  alt="GeForce Laptops"
+                />
+                <div class="game-card-con card-content">
+                  <h6 class="game-card-heading card-heading">
+                    GeForce Laptops
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="game-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/geforce-now-evens-4c25-P@2x.jpg"
+                  alt="GeForce Graphics Cards and Desktops"
+                />
+                <div class="game-card-con card-content">
+                  <h6 class="game-card-headin card-heading">GeForce Now</h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="game-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-shield-evens-4c25-P@2x.jpg"
+                  alt="NVIDIA SHIELD"
+                />
+                <div class="game-card-con card-content">
+                  <h6 class="game-card-heading card-headingg">NVIDIA SHIELD</h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- ? graphics -->
+          <div class="graphics-section product-section">
+            <h3 class="product-heading">
+              Graphics Cards, Laptops and Embedded Systems
+            </h3>
+            <div class="graphics card-grid grid-4-cols">
+              <div class="graphics-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-studio-laptops-and-desktops-evens-4c25-P@2x.jpg"
+                  alt="STUDIO Creator Laptops and Desktops"
+                />
+                <div class="graphics-card-con card-content">
+                  <h6 class="graphics-card-heading card-heading">
+                    STUDIO Creator Laptops and Desktops
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="graphics-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-rtx-a6000-evens-4c25-P@2x.jpg"
+                  alt="NVIDIA RTX Professional Graphics Cards"
+                />
+                <div class="graphics-card-con card-content">
+                  <h6 class="graphics-card-heading card-heading">
+                    NVIDIA RTX Professional Graphics Cards
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="graphics-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/RTX%20Professional%20Laptops-L@2x.png"
+                  alt="NVIDIA RTX in Professional Laptops"
+                />
+                <div class="graphics-card-con card-content">
+                  <h6 class="graphics-card-headin card-heading">
+                    NVIDIA RTX in Professional Laptops
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="graphics-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-jetson-family-evens-4c25-P@2x.jpg"
+                  alt="GNVIDIA Jetson"
+                />
+                <div class="graphics-card-con card-content">
+                  <h6 class="graphics-card-heading card-headingg">
+                    NVIDIA Jetson
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- networking -->
+          <div class="network-section product-section">
+            <h3 class="product-heading">Networking</h3>
+            <button class="btn second-btn network-btn">
+              Shop All
+              <i class="fas fa-angle-right btn-icon"></i>
+            </button>
+
+            <div class="network card-grid grid-4-cols">
+              <div class="network-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-networking-adapters-evens-3c33-P@2x.jpg"
+                  alt="Networking Switchess"
+                />
+                <div class="network-card-con card-content">
+                  <h6 class="network-card-heading card-heading">
+                    Adapter Cards
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="network-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-networking-switches-evens-3c33-P@2x.jpg"
+                  alt="Networking Switches"
+                />
+                <div class="network-card-con card-content">
+                  <h6 class="network-card-heading card-heading">
+                    Switch Systems
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="network-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/bluefield-2-controler-card-4c25-p@2x.jpg"
+                  alt="DPU"
+                />
+                <div class="network-card-con card-content">
+                  <h6 class="network-card-headin card-heading">DPU</h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="network-card card-con">
+                <img
+                  src="https://store.nvidia.com/assets/images/nvidia-interconnect-evens-3c33-P@2x.jpg"
+                  alt="Interconnect"
+                />
+                <div class="network-card-con card-content">
+                  <h6 class="network-card-heading card-headingg">
+                    Interconnect
+                  </h6>
+                  <button class="btn second-btn product-btn">
+                    Shop Now
+                    <i class="fas fa-angle-right btn-icon"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-bottom-section">
+        <div class="hero-bottom grid-2-cols">
+          <div class="hero-bottom-img-con">
+            <!-- <img class="hero-bottom-img" src="img/hero-bottom-img.jpeg" alt="" /> -->
+          </div>
+
+          <div class="hero-bottom-text-con">
+            <h3 class="hero-bottom-title">NVIDIA Deep Learning Institute</h3>
+            <p class="hero-bottom-description">
+              Education and Training Solutions to Solve the World's Most
+              Challenging Problems
+            </p>
+            <button class="btn primary-btn btn-hero btn-hero-bottm">
+              Get Online Training
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <div class="nav-bottom">
+      <div class="container">
+        <ul class="nav-bottom-list">
+          <li class="nav-list">
+            <a href="#customer-service">Customer Service</a>
+          </li>
+          <hr />
+          <li class="nav-list">
+            <a href="#technical-support">Technical Support</a>
+          </li>
+          <hr />
+          <li class="nav-list"><a href="#my-account">My Account</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-con grid-2-cols">
+          <div class="footer-left">
+            <div class="logo logo-footer">
+              <img
+                class="logo-img logo-footer-img"
+                width="48"
+                height="48"
+                src="https://img.icons8.com/color/48/nvidia.png"
+                alt="nvidia"
+              />
+              <a href="#" class="logo-text">NVIDIA</a>
+            </div>
+            <div class="footer-nav">
+              <ul class="footer-nav-list">
+                <li><a href="#privacy-policy">Privacy Policy</a></li>
+                <hr />
+                <li><a href="#legal">Legal Info</a></li>
+                <hr />
+                <li><a href="#contact">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="copyright">
+              <p class="copyright-text">
+                Copyright &copy; 2023 NVIDIA Corporation
+              </p>
+            </div>
+          </div>
+          <div class="footer-right">
+            <div class="location">
+              <a href="#location">USA - United States</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
