responsive to css

--- a/hands-on-3/index.html
+++ b/hands-on-3/index.html
@@ -53,7 +53,11 @@
             <div class="icon-nav">
               <img src="img/glass.svg" alt="" />
               <img src="img/profile.svg" alt="" />
-              <i></i>
+            </div>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
             </div>
           </div>
         </div>
@@ -143,7 +147,7 @@
                   alt="NVIDIA SHIELD"
                 />
                 <div class="game-card-con card-content">
-                  <h6 class="game-card-heading card-headingg">NVIDIA SHIELD</h6>
+                  <h6 class="game-card-heading card-heading">NVIDIA SHIELD</h6>
                   <button class="btn second-btn product-btn">
                     Shop Now
                     <i class="fas fa-angle-right btn-icon"></i>
@@ -213,7 +217,7 @@
                   alt="GNVIDIA Jetson"
                 />
                 <div class="graphics-card-con card-content">
-                  <h6 class="graphics-card-heading card-headingg">
+                  <h6 class="graphics-card-heading card-heading">
                     NVIDIA Jetson
                   </h6>
                   <button class="btn second-btn product-btn">
@@ -286,7 +290,7 @@
                   alt="Interconnect"
                 />
                 <div class="network-card-con card-content">
-                  <h6 class="network-card-heading card-headingg">
+                  <h6 class="network-card-heading card-heading">
                     Interconnect
                   </h6>
                   <button class="btn second-btn product-btn">
@@ -299,6 +303,7 @@
           </div>
         </div>
       </div>
+
       <div class="hero-bottom-section">
         <div class="hero-bottom grid-2-cols">
           <div class="hero-bottom-img-con">
@@ -333,6 +338,8 @@
         </ul>
       </div>
     </div>
+
+    <!-- *************** footer section *************** -->
 
     <footer class="footer">
       <div class="container">
