--- a/hands-on-2/hand-on-2.html
+++ b/hands-on-2/hand-on-2.html
@@ -23,14 +23,14 @@
       </nav>
     </header>
     <main>
-      <p class="sub-title">Mini Reg is a demo website.</p>
+      <p class="sub-header">Mini Reg is a demo website.</p>
       <h2>Courses</h2>
       <section class="card">
-        <h3>2110101 COMP PROG</h3>
-        <h4>จำนวนหน่วยกิต</h4>
-        <p>3 หน่วยกิต</p>
-        <h4>วันที่เรียน</h4>
-        <ul>
+        <h3 class="title">2110101 COMP PROG</h3>
+        <h4 class="credits">จำนวนหน่วยกิต</h4>
+        <p class="numOfCredits">1 หน่วยกิต</p>
+        <h4 class="schedule">วันที่เรียน</h4>
+        <ul class="dayClass">
           <li>วันพุธ</li>
           <li>วันพฤหัสบดี</li>
         </ul>
@@ -38,11 +38,11 @@
         <p>284/300</p>
       </section>
       <section class="card">
-        <h3>2301107 CALCULUS I</h3>
-        <h4>จำนวนหน่วยกิต</h4>
-        <p>3 หน่วยกิต</p>
-        <h4>วันที่เรียน</h4>
-        <ul>
+        <h3 class="title">2301107 CALCULUS I</h3>
+        <h4 class="credits">จำนวนหน่วยกิต</h4>
+        <p class="numOfCredits">1 หน่วยกิต</p>
+        <h4 class="schedule">วันที่เรียน</h4>
+        <ul class="dayClass">
           <li>วันจันทร์</li>
           <li>วันอังคาร</li>
           <li>วันพุธ</li>
@@ -53,11 +53,11 @@
         <p>300/300</p>
       </section>
       <section class="card">
-        <h3 class="subject">2304183 GEN PHYS LAB I</h3>
+        <h3 class="title">2304183 GEN PHYS LAB I</h3>
         <h4 class="credits">จำนวนหน่วยกิต</h4>
-        <p class="sub-credits">1 หน่วยกิต</p>
-        <h4 class="day">วันที่เรียน</h4>
-        <ul>
+        <p class="numOfCredits">1 หน่วยกิต</p>
+        <h4 class="schedule">วันที่เรียน</h4>
+        <ul class="dayClass">
           <li>วันจันทร์</li>
           <li>วันอังคาร</li>
           <li>วันพุธ</li>
@@ -69,7 +69,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright 2022, Mini Reg.</p>
+      <p class="copyright">Copyright 2022, Mini Reg.</p>
     </footer>
   </body>
 </html>
